# FleetCoreDesktop

./: .gitignore  .prettierignore  README.md  components.json  flake.nix  justfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
public/models/: x500-draco.glb
src/: App.css  App.tsx  ThemeProvider.tsx  main.tsx
src-tauri/: Cargo.toml  config.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs  query_enum.rs
src/components/: Layout.tsx
src/components/ui/: button.tsx  dialog.tsx  input.tsx  tooltip.tsx
src/context/: UserContext.ts
src/models/: Group.ts  Outpost.ts  User.ts
src/screens/: DashboardScreen.tsx  DronesScreen.tsx  LoginScreen.tsx  MaintenanceScreen.tsx  MissionCreationScreen.tsx  MissionScreen.tsx  OutpostCreationScreen.tsx  ProfileScreen.tsx  TabControl.tsx
src/screens/Dashboard/: DashboardScreen.tsx  types.ts
src/screens/Dashboard/components/: DashboardHeader.tsx  DashboardStats.tsx  MissionFeed.tsx  OutpostMap.tsx
src/screens/Drone/: DroneDetailScreen.tsx  types.ts
src/screens/Group/: GroupOverviewScreen.tsx  types.ts
src/screens/Maintenance/: MaintenanceScreen.tsx  types.ts
src/screens/Mission/: MissionCreationScreen.tsx  MissionDetectionsScreen.tsx  MissionHistoryScreen.tsx  types.ts
src/screens/Outpost/: OutpostCreationScreen.tsx  OutpostEditScreen.tsx  OutpostOverviewScreen.tsx  OutpostScreen.tsx  types.ts
src/screens/Profile/: ProfileScreen.tsx  types.ts
src/screens/common/: types.ts
src/utils/: api.ts  kvsClient.ts  location.ts
(+47 files in other folders)
