[package]
name = "fleetcore-desktop"
version = "0.1.0"
description = "FleetCore Drone system management software"
authors = ["Levente Hagymasi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
incremental = true
codegen-units = 256

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fleetcore_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2"
toml = "0.8"
reqwest = { version = "0.13.2", features = ["json", "blocking", "query"] }
tokio = "1.49.0"
tauri-plugin-geolocation = "2"
